<resources>
    <string name="app_name">BubblesLoveApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_login">LoginActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_hint">Ingrese correo electronico</string>
    <string name="password_hint">Ingrese la contraseña</string>
    <string name="forgot_label">¿Recuperar contraseña?</string>
    <string name="login_label">Ingresar</string>
    <string name="label_1">No tengo una cuenta</string>
    <string name="label_2">¡Registrate Ahora!</string>
    <string name="email_error">Email no valido</string>
    <string name="password_error">Contraseña no valida</string>
    <string name="forgot_button_label">Cambiar mi contraseña</string>
    <string name="name_label">Ingrese su nombre de usuario</string>
    <string name="label_3">Tengo una cuenta</string>
    <string name="label_4">¡Iniciar Sesión!</string>
    <string name="masculino_label">Masculino</string>
    <string name="femenino_label">Femenino</string>
    <string name="otro_label">Otro</string>
    <string name="home_label">Inicio</string>
    <string name="localizacion_label">Lugares Top</string>
    <string name="burbujas_label">Categorías</string>
    <string name="corazon_label">Citas</string>
    <string name="home_title">¡ADIÓS MONOTONÍA!</string>
    <string name="home_subtittle">Mejora tu relación de pareja con diferentes citas</string>
    <string name="cita_tittle">¡Todas las citas!</string>
    <string name="cita_subtittle">Aquí estan todas las citas para elegir la que más llame su atención.</string>
</resources>