<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.SignUpFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/signup_fragment_card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/signup_fragment_login_button"
        android:layout_marginHorizontal="@dimen/default_margin"
        app:cardElevation="16dp"
        app:layout_constraintVertical_chainStyle="spread">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/default_margin">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signup_fragment_email_layout"
                android:hint="@string/email_hint"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signup_fragment_email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textEmailAddress"
                    android:textAppearance="@style/Theme.Bubbles.Body1">
                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signup_fragment_password_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/signup_fragment_email_layout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/password_hint"
                app:endIconMode="password_toggle"
                android:layout_marginTop="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signup_fragment_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAppearance="@style/Theme.Bubbles.Body1"
                    android:inputType="textPassword">
                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signup_fragment_name_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/signup_fragment_password_layout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:hint="@string/name_label"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginTop="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signup_fragment_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAppearance="@style/Theme.Bubbles.Body1"
                    android:inputType="textPassword">
                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <RadioGroup
                android:id="@+id/fragment_forgot_radio_group"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/signup_fragment_name_layout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="@dimen/small_margin"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/fragment_signup_masculino"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textAppearance="@style/Theme.Bubbles.Body1"
                    android:buttonTint="@color/rojo"
                    android:text="@string/masculino_label">
                </RadioButton>

                <RadioButton
                    android:id="@+id/fragment_signup_femenino"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textAppearance="@style/Theme.Bubbles.Body1"
                    android:buttonTint="@color/rojo"
                    android:text="@string/femenino_label">
                </RadioButton>

                <RadioButton
                    android:id="@+id/fragment_signup_otro"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAppearance="@style/Theme.Bubbles.Body1"
                    android:buttonTint="@color/rojo"
                    android:text="@string/otro_label">
                </RadioButton>

            </RadioGroup>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signup_fragment_login_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/default_margin"
        android:backgroundTint="@color/rosado"
        android:text="@string/login_label"
        android:textColor="@color/rojo"
        app:layout_constraintBottom_toTopOf="@id/fragment_signup_label1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signup_fragment_card" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/fragment_signup_label1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_3"
        app:layout_constraintTop_toBottomOf="@id/signup_fragment_login_button"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/rosado"
        app:layout_constraintEnd_toStartOf="@id/fragment_signup_label2"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:textAppearance="@style/Theme.Bubbles.Body1"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/fragment_signup_label2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/fragment_signup_label1"
        app:layout_constraintBottom_toBottomOf="@id/fragment_signup_label1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/fragment_signup_label1"
        android:text="@string/label_4"
        android:textAppearance="@style/Theme.Bubbles.Body1"
        android:textColor="@color/blanco"/>

</androidx.constraintlayout.widget.ConstraintLayout>