<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/forgot_fragment_card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/default_margin"
        app:cardElevation="@dimen/default_margin"
        app:layout_constraintBottom_toTopOf="@id/forgot_fragment_login_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/default_margin">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/forgot_fragment_email_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_hint"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/forgot_fragment_email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textEmailAddress"
                    android:textAppearance="@style/Theme.Bubbles.Body1"></com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/forgot_fragment_login_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/forgot_fragment_card"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/fragment_forgot_label1"
        android:layout_marginHorizontal="@dimen/default_margin"
        android:text="@string/forgot_button_label"
        android:textColor="@color/rojo"
        android:backgroundTint="@color/rosado"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/fragment_forgot_label1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_1"
        app:layout_constraintTop_toBottomOf="@id/forgot_fragment_login_button"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/rosado"
        app:layout_constraintEnd_toStartOf="@id/fragment_forgot_label2"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:textAppearance="@style/Theme.Bubbles.Body1"
        android:layout_marginTop="@dimen/Big_margin"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/fragment_forgot_label2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/fragment_forgot_label1"
        app:layout_constraintBottom_toBottomOf="@id/fragment_forgot_label1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/fragment_forgot_label1"
        android:text="@string/label_2"
        android:textAppearance="@style/Theme.Bubbles.Body1"
        android:textColor="@color/blanco"/>

</androidx.constraintlayout.widget.ConstraintLayout>